Fix that headings with long words can be too wide on mobile

--- a/less/themes/pirat.less
+++ b/less/themes/pirat.less
@@ -150,6 +150,13 @@
   }
 }
 
+@media (max-width: @screen-sm-min) {
+  h1 {
+    word-wrap: break-word;
+    font-size: 3.2rem;
+  }
+}
+
 // Tables =====================================================================
 
 .DataList.CategoryList .CategoryHeading.Item.Depth1 {
